docs/user/manifests/kubeapps-local-dev-users-rbac.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kubeapps-user-namespace
