docs/user/manifests/kubeapps-local-dev-additional-auth-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapps-authproxy
  labels:
    app: kubeapps-authproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeapps-authproxy
  template:
    metadata:
      labels:
        app: kubeapps-authproxy
    spec:      
      containers:
        - name: nginx
          image: docker.io/bitnami/nginx:1.19.1-debian-10-r16
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 5
          volumeMounts:
            - name: vhost
              mountPath: /opt/bitnami/nginx/conf/server_blocks
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
        - name: auth-proxy-default
          args:
            - --provider=oidc
            - --client-id=default
            - --client-secret=ZXhhbXBsZS1hcHAtc2VjcmV0
            - --cookie-secret=bm90LWdvb2Qtc2VjcmV0Cg==
            - --upstream=http://kubeapps.kubeapps/
            - --http-address=0.0.0.0:3000
            - --email-domain=*
            - --pass-basic-auth=false
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --scope=openid email groups
            - --oidc-issuer-url=https://172.18.0.2:32000
            - --ssl-insecure-skip-verify=true
            - --redirect-url=https://localhost/clusters/default/oauth2/callback
            - --cookie-name=_oauth2_proxy_default
            - --proxy-prefix=/clusters/default/oauth2
          image: docker.io/bitnami/oauth2-proxy:6.0.0-debian-10-r23
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: proxy
              containerPort: 3000
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
        - name: auth-proxy-second-cluster
          args:
            - --provider=oidc
            - --client-id=second-cluster
            - --client-secret=ZXhhbXBsZS1hcHAtc2VjcmV0LXNlY29uZC1jbHVzdGVy
            - --cookie-secret=bm90LWdvb2Qtc2VjcmV0Cg==
            - --upstream=http://kubeapps.kubeapps/
            - --http-address=0.0.0.0:3001
            - --email-domain=*
            - --pass-basic-auth=false
            - --pass-access-token=true
            - --pass-authorization-header=true
            - --scope=openid email groups
            - --oidc-issuer-url=https://172.18.0.2:32000
            - --ssl-insecure-skip-verify=true
            - --redirect-url=https://localhost/clusters/second-cluster/oauth2/callback
            - --cookie-name=_oauth2_proxy_second_cluster
            - --proxy-prefix=/clusters/second-cluster/oauth2
          image: docker.io/bitnami/oauth2-proxy:6.0.0-debian-10-r23
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: proxy
              containerPort: 3000
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 25m
              memory: 32Mi
      volumes:
        - name: vhost
          configMap:
            name: kubeapps-authproxy-config
---
# Service to expose the authproxy
apiVersion: v1
kind: Service
metadata:
  name: kubeapps-authproxy
  labels:
    app: kubeapps-authproxy
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      nodePort: 30000
      protocol: TCP
      name: http
  selector:
    app: kubeapps-authproxy
---
# Ingress with TLS so Kubeapps authproxy is served at https://localhost/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps-authproxy
  labels: 
    app: kubeapps-authproxy
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: kubeapps-authproxy
            servicePort: http
  tls:
    - hosts:
        - localhost
      secretName: localhost-tls
